<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signinVM" type="com.dessapplication.app.modules.signin.data.viewmodel.SigninVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearSignin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowOne"
            android:layout_height="@dimen/_2pxh"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="@dimen/_15pxh"
            android:scaleType="fitXY" android:src="@drawable/img_arrow1"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnbuatakun"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_192pxv"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtBuatAkun"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_12pxh"
                android:singleLine="true"
                android:text="@{signinVM.signinModel.txtBuatAkun}"
                style="@style/txtPoppinsbold24" tools:text="@string/lbl_buat_akun"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAlamatemail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:singleLine="true"
                android:text="@{signinVM.signinModel.txtAlamatemail}"
                style="@style/txtPoppinsbold16" tools:text="@string/lbl_alamat_email"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_15"
                android:ellipsize="end"
                android:hint="@string/msg_cth_saaxx_gma"
                android:id="@+id/etGroupFifteen"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@={signinVM.signinModel.etGroupFifteenValue}"
                android:textColorHint="@color/gray_500"
                style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:singleLine="true"
                android:text="@{signinVM.signinModel.txtPassword}"
                style="@style/txtPoppinsbold16" tools:text="@string/lbl_password"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_15"
                android:drawableEnd="@drawable/img_eye"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_xxxxxxxx"
                android:id="@+id/etPasswordOne" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_17pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@={signinVM.signinModel.etPasswordOneValue}"
                android:textColorHint="@color/gray_500"
                style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowcheckmark"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageCheckmark"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_checkmark"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_checkmark"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSetujusyarat"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_weight="0.91"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{signinVM.signinModel.txtSetujusyarat}"
                    style="@style/txtPoppinsregular14" tools:text="@string/msg_setuju_syarat"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnDaftar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_daftar"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_daftar"/>
            <LinearLayout android:id="@+id/linearRowlineone"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <View android:background="@color/black_900"
                    android:id="@+id/lineLineOne"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_weight="0.43" android:layout_width="0dp"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAtau"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_weight="0.13"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{signinVM.signinModel.txtAtau}"
                    style="@style/txtPoppinsbold16" tools:text="@string/lbl_atau2"/>
                <View android:background="@color/black_900"
                    android:id="@+id/lineLineTwo"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_weight="0.43" android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowvector"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleorange_400cornerRadius">
                <ImageView android:id="@+id/imageVector"
                    android:layout_height="@dimen/_22pxh"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginStart="@dimen/_38pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="@dimen/_22pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDaftardenganG"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_46pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_weight="0.89"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{signinVM.signinModel.txtDaftardenganG}"
                    style="@style/txtPoppinsbold16_1" tools:text="@string/msg_daftar_dengan_g"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
