<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgetPassOneVM" type="com.dessapplication.app.modules.forgetpassone.data.viewmodel.ForgetPassOneVM"/>
    </data>
    <LinearLayout android:id="@+id/linearForgetPassOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowOne"
            android:layout_gravity="start"
            android:layout_height="@dimen/_2pxh"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="@dimen/_15pxh"
            android:scaleType="fitXY" android:src="@drawable/img_arrow1"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtVerifikasiKode"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgetPassOneVM.forgetPassOneModel.txtVerifikasiKode}"
            style="@style/txtPoppinsbold24" tools:text="@string/lbl_verifikasi_kode"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtMasukkankodee"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:text="@{forgetPassOneVM.forgetPassOneModel.txtMasukkankodee}"
            style="@style/txtPoppinsregular13" tools:text="@string/msg_masukkan_kode_e"/>
        <ImageView android:id="@+id/imageGroup101"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_48pxh"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="@dimen/_205pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group101"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group101"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnselanjutnya"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_101pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSelanjutnya"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_selanjutnya"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_selanjutnya"/>
        </LinearLayout>
    </LinearLayout>
</layout>
